<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/keywordsFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_patent_name"
            android:imeOptions="flagNoFullscreen"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/organizationFieldLayout"
        android:layout_marginTop="@dimen/tab_counter_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_patent_description"
            android:imeOptions="flagNoFullscreen"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/tab_counter_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_patent_link"
            android:imeOptions="flagNoFullscreen"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

</android.support.v7.widget.LinearLayoutCompat>